agrege un cambio

--- a/indexgpt.html
+++ b/indexgpt.html
@@ -45,7 +45,7 @@
     <section id="catalog">
         <h2>Nuestro Catálogo</h2>
         <ul>
-            <li><a href="#">Álbum 1</a></li>
+            <li><a href="#">Alisson - Abre Tus Alas</a></li>
             <li><a href="#">Álbum 2</a></li>
             <li><a href="#">Álbum 3</a></li>
             <li><a href="#">Álbum 4</a></li>
