--- a/index.html
+++ b/index.html
@@ -2,24 +2,27 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adise Records</title>
     <link rel="stylesheet" href="cssgpt.css">
     <script src="script.js"></script>
+    <link rel="shortcut icon" href="adiselogo.png">
 </head>
-<body>
+<body class="body-container">
     <header>
         <nav id="navbar">
             <ul>
-                <li><a href="#banner" onclick="scrollToSection('banner')">Inicio</a></li>
+                <li><a href="#" onclick="scrollToSection('banner')">Inicio</a></li>
                 <li><a href="#artists" onclick="scrollToSection('artists')">Artistas</a></li>
                 <li><a href="#catalog" onclick="scrollToSection('catalog')">Catálogo</a></li>
                 <li><a href="#contact" onclick="scrollToSection('contact')">Contacto</a></li>
             </ul>
+            <img src="adiselogo.png" class="img-logo--nav"> 
         </nav>
     </header>
 
-    <section id="banner">
-        <h1>Bienvenido a Adise Records</h1>
+    <section id="banner" >
+        <h1>Bienvenido a A.D.I.S.E.<b class="p-estrella">&#9734;</b>Records</h1>
         <p>Descubre la mejor música de nuestros artistas</p>
     </section>
 
@@ -39,13 +42,27 @@
             cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
             proident, sunt in culpa qui officia deserunt mollit anim id est laborum..</p>
         </div>
+         <div class="artist">
+            <img src="piñonfijo.jpg" alt="Artista 3" >
+            <h3>Alisson - Tarzo y Lema</h3>
+            <p>consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+            proident, sunt in culpa qui officia deserunt mollit anim id est laborum..</p>
+        </div>
+         <div class="artist">
+            <img src="capibara.jpg" alt="Artista 4" >
+            <h3>Alisson - Tarzo y Lema</h3>
+            <p>consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+            proident, sunt in culpa qui officia deserunt mollit anim id est laborum..</p>
+        </div>
         <!-- Agrega más artistas aquí -->
     </section>
 
     <section id="catalog">
         <h2>Nuestro Catálogo</h2>
         <ul>
-            <li><a href="#">Alisson - Abre Tus Alas</a></li>
+            <li><a href="#">Álbum 1</a></li>
             <li><a href="#">Álbum 2</a></li>
             <li><a href="#">Álbum 3</a></li>
             <li><a href="#">Álbum 4</a></li>
