--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Adise Records</title>
+    <title>A.D.I.S.E. Records</title>
     <link rel="stylesheet" href="cssgpt.css">
     <script src="script.js"></script>
     <link rel="shortcut icon" href="adiselogo.png">
@@ -22,8 +22,8 @@
     </header>
 
     <section id="banner" >
-        <h1>Bienvenido a A.D.I.S.E.<b class="p-estrella">&#9734;</b>Records</h1>
-        <p>Descubre la mejor música de nuestros artistas</p>
+        <h1 id="h1">Bienvenido a A.D.I.S.E.<b class="p-estrella">&#9734;</b>Records</h1>
+        <p id="psec">Descubre la mejor música</p>
     </section>
 
     <section id="artists">
@@ -73,7 +73,7 @@
         <h2>Contacto</h2>
         <div class="contact-form">
             <h3>Agenda un turno</h3>
-            <form action="agendar.php" method="POST">
+            <form action="email.php" method="POST">
                 <input type="text" name="nombre" placeholder="Nombre" required>
                 <input type="email" name="email" placeholder="Correo electrónico" required>
                 <input type="text" name="telefono" placeholder="Teléfono" required>
@@ -84,7 +84,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2023 Adise Records. Todos los derechos reservados.</p>
+        <p>&copy; 2023 A.D.I.S.E.<b class="p-estrella">&#9734;</b> Records. Todos los derechos reservados.</p>
     </footer>
 </body>
 </html>
