--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A.D.I.S.E. Records</title>
-    <link rel="stylesheet" href="cssgpt.css">
+    <link rel="stylesheet" href="estilo.css">
     <script src="script.js"></script>
     <link rel="shortcut icon" href="adiselogo.png">
 </head>
