--- a/index.html
+++ b/index.html
@@ -1,37 +1,124 @@
-<!DOCTYPE html>
+    <!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A.D.I.S.E. Records</title>
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="cssgpt.css">
     <script src="script.js"></script>
     <link rel="shortcut icon" href="adiselogo.png">
 </head>
 <body class="body-container"> 
     <header>
         <nav id="navbar">
-            <ul>
                 <input type="checkbox" id="check"> 
-                <label for="check" class="checklbl">
+                <label for="check" class="checkbtn">
                     <i class="fas fa-bars"></i>
                 </label>
+            <ul>
                 <li><a href="#" onclick="scrollToSection('banner')">Inicio</a></li>
                 <li><a href="#artists" onclick="scrollToSection('artists')">Artistas</a></li>
                 <li><a href="#catalog" onclick="scrollToSection('catalog')">Catálogo</a></li>
                 <li><a href="#contact" onclick="scrollToSection('contact')">Contacto</a></li>
             </ul>
             <img src="adiselogo.png" class="img-logo--nav"> 
-        </nav>
+        </nav> 
     </header>
 
     <section id="banner" >
         <h1 id="h1">Bienvenido a A.D.I.S.E.<b class="p-estrella">&#9734;</b>Records</h1>
         <p id="psec">Descubre la mejor música</p>
+        <img src="adiselogo.png" class="img-logo--banner"> 
     </section>
-        <h2 id="h2-na">Nuestros Artistas</h2>
+    
+    <section id="presentacion">
+        <p>
+        “Hemos fundado <b id="b-ar">A.D.I.S.E.<b class="p-estrella">&#9734;</b> Records</b>, que en sus siglas significa</br>
+        “Asidero De Imágenes Sonoras Esparcidas”; originalmente en el invierno</br>
+        del año 2007 y con su lanzamiento oficial luego en el 2020.</br>
+        </br>
+        Cansados de luchar por muchos años como Artistas y Músicos</br>
+        independientes contra toda la confusión y desinformación de la industria</br>
+        Musical en general, decidimos que podíamos hacerlo por nuestros propios</br>
+        medios y en algunos puntos ¡Mucho mejor!</br>
+        </br>
+        Comenzamos <b id="b-ar">A.D.I.S.E.<b class="p-estrella">&#9734;</b> Records</b> con el fin de incorporar a Artistas,</br>
+        que no pertenecen a un Sello Discográfico Multinacional; y a los cuales</br>
+        ofrecer la oportunidad de tener una plataforma con las herramientas</br>
+        suficientes, que les permita el desarrollo artístico de contenido Musical,</br>
+        Audio-Visual y Gráfico, para luego publicar, promover e insertar en la</br>
+        industria musical universal, teniendo así el control total de su propia</br>
+        carrera Artística Profesional.</br>
+        </br>
+        <b id="b-ar">A.D.I.S.E.<b class="p-estrella">&#9734;</b> Records</b> es 100% independiente, tenemos la posibilidad de</br>
+        lanzar y promover tu música en todos los continentes del mundo.</br>
+        Desde que formamos <b id="b-ar">A.D.I.S.E.<b class="p-estrella">&#9734;</b> Records</b> hemos ido creciendo todos</br>
+        estos años, ampliando cada vez más las posibilidades <b id="b-oc">reales</b> de <b id="b-oc">obtener</br>
+        ingresos con tu propia música</b> en todas las formas posibles. No solo</br>
+        con las entidades que actúan como agentes de recaudación obligatoria</br>
+        en Argentina, como: SADAIC, AADI-CAPIF y ARGENTORES, sino</br>
+        también con las <b id="b-oc">Sociedades de Gestión Colectiva del mundo</b> como</br>
+        ASCAP (USA), BMI (USA), SAYCO (CO), SACM (MX) and GMR (WW).</br>
+        </br>
+        Nuestro objetivo es acompañar tu carrera profesional para que consigas</br>
+        el éxito que tu música merece.</br>
+        </br>
+        ¡Bienvenido a la familia <b id="b-ar">A.D.I.S.E.<b class="p-estrella">&#9734;</b> Records</b>!”</br>
+        </p> 
+    </section>
+
+    <section id="section-pm">
+        <h2 id="h2-pm">Producción Musical</h2>
+
+    </section>
+
+
+
+
+    <section id="catalog">
+        <h2 id="h2-catalog">Nuestro Catálogo</h2>
+        <ul>
+            <li>Augusto Sestini</li>
+                <a href="https://youtu.be/WN8z8s25nls" target="_blank">Un Niño</a>
+            <li>Cami Islas</li>
+                <a href="https://youtu.be/SYyzHjd6vrQ" target="_blank">Basta para Mi</a>
+            <li>Elvis Dixilan</li>
+                <a href="https://youtu.be/XGsoU3U6yM8" target="_blank">Mujer Fatal</a>
+            <li>Gabriel Leiva Grupo</li> 
+                <a href="https://youtu.be/8Q8dvwJTeIc" target="_blank">Atardecer, Telarañas, Boedo - Yo Nací Para Esto (Live Streaming)</a>
+                <a href="https://youtu.be/-CCovahD_5U" target="_blank">Yo Nací Para Esto - Yo Nací Para Esto</a>
+                <a href="https://youtu.be/EzBanFOlvL8" target="_blank">La Favio, Latidos - Yo Nací Para Esto</a>
+                <a href="https://youtu.be/zCJ0E0k3iWM" target="_blank">La Nave De Los Sueños - Yo Nací Para Esto</a>
+                <a href="https://youtu.be/Mt9B-Z5fVcg" target="_blank">Tilcara - Tilcara "Lado A"</a>
+                <a href="https://youtu.be/G9aUmcfF7dc" target="_blank">Paz - Tilcara "Lado A"</a>
+                <a href="https://youtu.be/8OROIMvr89k" target="_blank">Tu Voz - Tilcara "Lado A"</a>
+            <li>Gabriel Lemos</li>
+                <a href="https://youtu.be/TNJBetZLGZY" target="_blank">Fría Como El Hielo</a>
+            <li>Los Nadal</li>
+                <a href="https://youtu.be/fv0mXCCPj5A" target="_blank">A los Tobas</a>
+                <a href="https://youtu.be/gVnW-FPkbto" target="_blank">Soy De Aquí, Soy De Allá</a>
+                <a href="https://youtu.be/kH-wNzfIVr0" target="_blank">Soy De Aquí, Soy De Allá 2</a>
+                <a href="https://youtu.be/fhC_K25qjQ4" target="_blank">La Algarrobera</a> 
+            <li>Luciano Sposari</li>
+                <a href="https://youtu.be/FJkIm0dqyuQ" target="_blank">La Angustia De Las Nueve Y Veinte</a>
+                <a href="https://youtu.be/WgOFao7RkRk" target="_blank">La Angustia De Las Nueve Y Veinte - "Version desde casa"</a>
+                <a href="https://youtu.be/hAMydjmU2xY" target="_blank">Danza Cruel</a>
+                <a href="https://youtu.be/bme2lKTYDTA" target="_blank">Alfileres</a> 
+            <li>Maru Fedele</li>
+                <a href="https://youtube.com/playlist?list=OLAK5uy_k0KF0h_Cl2Yn4KTXAPlm1mfuTDUkfEsEM" target="_blank">Amarás</a>
+                <a href="https://youtube.com/playlist?list=OLAK5uy_kf-miSh74ZT3n-xZosQE0ldI3Cnd4t_64" target="_blank">Cuenta</a>  
+            <li>Nunca Será</li>
+                <a href="https://youtu.be/U6MXxvUap0o" target="_blank">Sin Retorno</a>
+            <li>P2</li>
+                <a href="https://youtube.com/playlist?list=PLWhMLcSqvsp1OS9VDTGaz1t3l81XJ62BD" target="_blank">PlayList Con A.D.i.S.E. Records</a>
+            <li>Torpedos PunkAlternativo</li> 
+                <a href="https://youtube.com/playlist?list=PLceQ-SyHl6rHFFQOPwRS7bWYMUPn75DVV" target="_blank">PlayList Con A.D.i.S.E. Records</a>
+            <!-- <li><a href="#"></a></li> -->
+        </ul>
+    </section>
+
     <section id="artists">
-        
+        <h2 id="h2-na">Nuestros Artistas</h2>
         <div class="artist">
             <img src="Alissonabretusalas.jpg" alt="Artista 1">
             <h3>Alisson - Abre Tus Alas</h3>
@@ -54,28 +141,6 @@
             proident, sunt in culpa qui officia deserunt mollit anim id est laborum..</p>
         </div> 
         <!-- Agrega más artistas aquí -->
-    </section>
-
-    <section id="catalog">
-        <h2 id="h2-catalog">Nuestro Catálogo</h2>
-        <ul>
-            <li>Augusto Sestini<a href="https://youtu.be/WN8z8s25nls">Un Niño</a></li> 
-            <li>Cami Islas<a href="https://youtu.be/SYyzHjd6vrQ"></a></li> 
-            <li>Elvis Dixieland<a href="#"></a></li> 
-            <li>Gabriel Leiva Grupo<a href="#"></a></li> 
-            <li>Gabriel Lemos<a href="https://youtu.be/TNJBetZLGZY"></a></li> 
-            <li>Los Nadal
-                <a href="https://youtu.be/fv0mXCCPj5A"></a>
-                <a href="https://youtu.be/gVnW-FPkbto"></a>
-                <a href="https://youtu.be/kH-wNzfIVr0"></a>
-                <a href="https://youtu.be/fhC_K25qjQ4"></a></li> 
-            <li>Luciano Sposari<a href="#"></a></li> 
-            <li>Maru Fedele<a href="#"></a></li>  
-            <li>Nunca Será<a href="https://youtu.be/U6MXxvUap0o"></a></li>
-            <li>P2<a href="https://youtube.com/playlist?list=PLWhMLcSqvsp1OS9VDTGaz1t3l81XJ62BD"></a></li> 
-            <li>Torpedos PunkAlternativo<a href="https://youtube.com/playlist?list=PLceQ-SyHl6rHFFQOPwRS7bWYMUPn75DVV"></a></li>
-            <!-- <li><a href="#"></a></li> -->
-        </ul>
     </section>
 
     <section id="contact">
