--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <section id="banner" >
         <h1 id="h1">Bienvenido a A.D.I.S.E.<b class="p-estrella">&#9734;</b>Records</h1>
-        <p id="psec">Descubre la mejor música</p>
+        <p id="p-banner">Descubre la mejor música</p>
         <img src="adiselogo.png" class="img-logo--banner"> 
     </section>
     
@@ -53,11 +53,11 @@
         <b id="b-ar">A.D.I.S.E.<b class="p-estrella">&#9734;</b> Records</b> es 100% independiente, tenemos la posibilidad de</br>
         lanzar y promover tu música en todos los continentes del mundo.</br>
         Desde que formamos <b id="b-ar">A.D.I.S.E.<b class="p-estrella">&#9734;</b> Records</b> hemos ido creciendo todos</br>
-        estos años, ampliando cada vez más las posibilidades <b id="b-oc">reales</b> de <b id="b-oc">obtener</br>
+        estos años, ampliando cada vez más las posibilidades <b id="b-negrita">reales</b> de <b id="b-negrita">obtener</br>
         ingresos con tu propia música</b> en todas las formas posibles. No solo</br>
         con las entidades que actúan como agentes de recaudación obligatoria</br>
         en Argentina, como: SADAIC, AADI-CAPIF y ARGENTORES, sino</br>
-        también con las <b id="b-oc">Sociedades de Gestión Colectiva del mundo</b> como</br>
+        también con las <b id="b-negrita">Sociedades de Gestión Colectiva del mundo</b> como</br>
         ASCAP (USA), BMI (USA), SAYCO (CO), SACM (MX) and GMR (WW).</br>
         </br>
         Nuestro objetivo es acompañar tu carrera profesional para que consigas</br>
@@ -65,13 +65,51 @@
         </br>
         ¡Bienvenido a la familia <b id="b-ar">A.D.I.S.E.<b class="p-estrella">&#9734;</b> Records</b>!”</br>
         </p> 
+        <img src="" clas="guitarrafondo">
     </section>
 
     <section id="section-pm">
         <h2 id="h2-pm">Producción Musical</h2>
-
+        <div class="artist">
+            <img src="" alt="">
+            <h3 id="h3-pm">¿Producción Musical?</h3>
+            <p id="p-pm">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p>
+        </div>
     </section>
 
+    <section id="registro">
+        <h2 id="h2-registro">Servicios de registros:</h2>
+        </br>
+        <p id="p-registro">INPI: Registro de Patente “Marca” más Logotipo en INPI.</br>
+        </br>
+        TRANSCRIPCION DE PARTITURAS: para registros de “Derecho de autor” en</br>
+        DNDA / SADAIC / PUBLISHING EDITORIAL.</br>
+        </br> 
+        NOTA: para el registro de “Letra y Música”, no incluye el copiado y tipiado de las</br>
+        “Letras”. En caso de hacerlo nosotros tiene un costo adicional por cada</br>
+        canción.</br>
+        </br>
+        DNDA: Registro e inscripción de “Obra inédita” (Letra y/o Música). Con la opción de</br>
+        registrar de 2 y hasta 15 canciones en un solo tramite como “Obra Integral”.</br>
+        </br>
+        SADAIC: Registro de 1 (una) canción “Letra y/o Música” (Autor y Compositor).</br>
+        Presentación e inscripción del “Boletín de declaración”.</br>
+        </br>
+        SADAIC: Registro de varias canciones “Letra y/o Música” (Autor y Compositor).</br>
+        Presentación e inscripción de los “Boletines de declaración” con la opción de registrar</br>
+        desde 5 y hasta 15 canciones en un solo tramite como “Obra Integral”.</br>
+        </br>
+        DNDA + SADAIC: (1 canción) Registro de una canción “Letra y/o Música” (Autor y</br>
+        Compositor), con la combinación de los dos trámites juntos. (“Obra inédita”+ “Boletín</br>
+        de declaración”)</br>
+        </br>
+        DNDA + SADAIC: (varias canciones “hasta 15”) Registro de varias canciones “Letra</br>
+        y/o Música” (Autor y Compositor), con la combinación de los dos trámites juntos.</br>
+        Presentación e inscripción de los “Boletines de declaración” con la opción de registrar</br>
+        desde 5 y hasta 15 canciones en un solo tramite como “Obra Integral”.</p></br>
+    </section>
 
 
 
