--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
     <section id="section-pm">
         <h2 id="h2-pm">Producción Musical</h2>
-        <div class="artist">
+        <div class="div-pm">
             <img src="" alt="">
             <h3 id="h3-pm">¿Producción Musical?</h3>
             <p id="p-pm">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -149,7 +149,7 @@
                 <a href="https://youtu.be/U6MXxvUap0o" target="_blank">Sin Retorno</a>
             <li>P2</li>
                 <a href="https://youtube.com/playlist?list=PLWhMLcSqvsp1OS9VDTGaz1t3l81XJ62BD" target="_blank">PlayList Con A.D.i.S.E. Records</a>
-            <li>Torpedos PunkAlternativo</li> 
+            <li>TorP2</li> 
                 <a href="https://youtube.com/playlist?list=PLceQ-SyHl6rHFFQOPwRS7bWYMUPn75DVV" target="_blank">PlayList Con A.D.i.S.E. Records</a>
             <!-- <li><a href="#"></a></li> -->
         </ul>
