--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                 </select>
                 <textarea name="mensaje" id="mensaje" placeholder="Mensaje"></textarea>
                 <button type="submit">Enviar</button>
-                <a href="https://api.whatsapp.com/send?phone=541134173720" id="whatsapp">Envianos un mensaje</a>
+                <a href="https://api.whatsapp.com/send?phone=541134173720" id="whatsapp" target="_blank">Envianos un mensaje</a>
             </form>
         </div>
     </section>
