--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <header>
         <nav id="navbar"> 
             <ul>
-                <li><a href="#" onclick="scrollToSection('banner')">Inicio</a></li>
-                <li><a href="#artists" onclick="scrollToSection('artists')">Artistas</a></li>
-                <li><a href="#catalog" onclick="scrollToSection('catalog')">Catálogo</a></li>
-                <li><a href="#contact" onclick="scrollToSection('contact')">Contacto</a></li>
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#artists">Artistas</a></li>
+                <li><a href="#catalog">Catálogo</a></li>
+                <li><a href="#contact">Contacto</a></li>
             </ul>
             <img src="adiselogo.png" class="img-logo--nav"> 
         </nav> 
