--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <nav id="navbar"> 
             <ul>
                 <li><a href="#">Inicio</a></li>
-                <li><a href="#artists">Artistas</a></li>
                 <li><a href="#catalog">Catálogo</a></li>
-                <li><a href="#contact">Contacto</a></li>
+                <li><a href="#artists">Artistas</a></li>
+                <li><a href="#footer">Contacto</a></li>
             </ul>
             <img src="adiselogo.png" class="img-logo--nav"> 
         </nav> 
@@ -185,7 +185,7 @@
                 <input type="text" name="nombre" placeholder="Nombre" required>
                 <input type="email" name="email" placeholder="Correo electrónico" required>
                 <input type="text" name="telefono" placeholder="Teléfono" required>
-                <select id="selecionar">
+                <select id="selecionar" name="select">
                     <option value="">Sello</option>
                     <option value="">Sala</option>
                     <option value="">Video</option>
@@ -198,7 +198,7 @@
         </div>
     </section>
 
-    <footer>
+    <footer id="footer">
         <p>&copy; 2023 A.D.I.S.E.<b class="p-estrella">&#9734;</b> Records. Todos los derechos reservados.</p>
     </footer>
 </body>
