--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     </section>
 
     <section id="registro">
-        <h2 id="h2-registro">Servicios de registros:</h2>
+        <h2 id="h2-registro">Servicios de registros y patentamientos:</h2>
         </br>
         <p id="p-registro">INPI: Registro de Patente “Marca” más Logotipo en INPI.</br>
         </br>
