--- a/index.html
+++ b/index.html
@@ -72,6 +72,13 @@
             <p id="p-pm">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
             tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
             quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p>
+        </div>  
+        <div class="div-pm-2">
+            <img src="" alt="">
+            <h3 id="h3-pm-2">¿Producción Musical?</h3>
+            <p id="p-pm-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p>
         </div>
     </section>
 
@@ -113,12 +120,16 @@
         <h2 id="h2-catalog">Nuestro Catálogo</h2>
         <ul>
             <li>Augusto Sestini</li>
+                <img src="">
                 <a href="https://youtu.be/WN8z8s25nls" target="_blank">Un Niño</a>
             <li>Cami Islas</li>
+                <img src="">
                 <a href="https://youtu.be/SYyzHjd6vrQ" target="_blank">Basta para Mi</a>
             <li>Elvis Dixilan</li>
+                <img src="">
                 <a href="https://youtu.be/XGsoU3U6yM8" target="_blank">Mujer Fatal</a>
             <li>Gabriel Leiva Grupo</li> 
+                <img src="">
                 <a href="https://youtu.be/8Q8dvwJTeIc" target="_blank">Atardecer, Telarañas, Boedo - Yo Nací Para Esto (Live Streaming)</a>
                 <a href="https://youtu.be/-CCovahD_5U" target="_blank">Yo Nací Para Esto - Yo Nací Para Esto</a>
                 <a href="https://youtu.be/EzBanFOlvL8" target="_blank">La Favio, Latidos - Yo Nací Para Esto</a>
@@ -127,58 +138,45 @@
                 <a href="https://youtu.be/G9aUmcfF7dc" target="_blank">Paz - Tilcara "Lado A"</a>
                 <a href="https://youtu.be/8OROIMvr89k" target="_blank">Tu Voz - Tilcara "Lado A"</a>
             <li>Gabriel Lemos</li>
+                <img src="">
                 <a href="https://youtu.be/TNJBetZLGZY" target="_blank">Fría Como El Hielo</a>
             <li>Los Nadal</li>
+                <img src="">
                 <a href="https://youtu.be/fv0mXCCPj5A" target="_blank">A los Tobas</a>
                 <a href="https://youtu.be/gVnW-FPkbto" target="_blank">Soy De Aquí, Soy De Allá</a>
                 <a href="https://youtu.be/kH-wNzfIVr0" target="_blank">Soy De Aquí, Soy De Allá 2</a>
                 <a href="https://youtu.be/fhC_K25qjQ4" target="_blank">La Algarrobera</a> 
             <li>Luciano Sposari</li>
+                <img src="">
                 <a href="https://youtu.be/FJkIm0dqyuQ" target="_blank">La Angustia De Las Nueve Y Veinte</a>
                 <a href="https://youtu.be/WgOFao7RkRk" target="_blank">La Angustia De Las Nueve Y Veinte - "Version desde casa"</a>
                 <a href="https://youtu.be/hAMydjmU2xY" target="_blank">Danza Cruel</a>
                 <a href="https://youtu.be/bme2lKTYDTA" target="_blank">Alfileres</a> 
             <li>Maru Fedele</li>
+                <img src="">
                 <a href="https://youtube.com/playlist?list=OLAK5uy_k0KF0h_Cl2Yn4KTXAPlm1mfuTDUkfEsEM" target="_blank">Amarás</a>
                 <a href="https://youtube.com/playlist?list=OLAK5uy_kf-miSh74ZT3n-xZosQE0ldI3Cnd4t_64" target="_blank">Cuenta</a>  
             <li>Nunca Será</li>
+                <img src="">
                 <a href="https://youtu.be/U6MXxvUap0o" target="_blank">Sin Retorno</a>
             <li>P2</li>
-                <a href="https://youtube.com/playlist?list=PLWhMLcSqvsp1OS9VDTGaz1t3l81XJ62BD" target="_blank">PlayList Con A.D.i.S.E. Records</a>
+                <img src="">
+                <a href="https://youtube.com/playlist?list=PLWhMLcSqvsp1OS9VDTGaz1t3l81XJ62BD" target="_blank">PlayList</a>
             <li>TorP2</li> 
-                <a href="https://youtube.com/playlist?list=PLceQ-SyHl6rHFFQOPwRS7bWYMUPn75DVV" target="_blank">PlayList Con A.D.i.S.E. Records</a>
+                <img src="">
+                <a href="https://youtube.com/playlist?list=PLceQ-SyHl6rHFFQOPwRS7bWYMUPn75DVV" target="_blank">PlayList</a>
             <!-- <li><a href="#"></a></li> -->
         </ul>
-    </section>
-
-    <section id="artists">
-        <h2 id="h2-na">Nuestros Artistas</h2>
-        <div class="artist">
-            <img src="Alissonabretusalas.jpg" alt="Artista 1">
-            <h3>Alisson - Abre Tus Alas</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p>
-        </div>
-        <div class="artist">
-            <img src="Alissonangel.jpg" alt="Artista 2" >
-            <h3>Alisson - Tarzo y Lema</h3>
-            <p>consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-            proident, sunt in culpa qui officia deserunt mollit anim id est laborum..</p>
-        </div>
-         <div class="artist">
-            <img src="piñonfijo.jpg" alt="Artista 3" >
-            <h3>Alisson - Tarzo y Lema</h3>
-            <p>consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-            proident, sunt in culpa qui officia deserunt mollit anim id est laborum..</p>
-        </div> 
-        <!-- Agrega más artistas aquí -->
-    </section>
+    </section> 
 
     <section id="contact">
         <h2 id="h2-contact">Contacto</h2>
+        <div id="h4-container">
+            <h4>Gmail: Milton.html.index@gmail.com</h4>
+            <h4>Telefono: +54 11-3417-3720</h4>
+            <h4>Intagram: @UniverseMarte</h4>
+            <h4>TikTok: @MarteUniverse</h4>
+        </div>
         <div class="contact-form">
             <h3>Agenda un turno</h3>
             <form action="email.php" method="POST">
